tdf#121031 sw_redlinehide: fix SwUndoDelete of table: create table frames

(regression from 723728cd358693b8f4bc9d913541aa4479f2bd48)

Change-Id: I7a52b8499f05e9e8cbf81330ea264fbbfe3bac87
Reviewed-on: https://gerrit.libreoffice.org/63462
Tested-by: Jenkins
Reviewed-by: Michael Stahl <Michael.Stahl@cib.de>
(cherry picked from commit 68880a3004623553bf1920ad8a4a4d2be4bca234)